--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -72,7 +72,7 @@ html {
 }
 
 .links .home {
-  color: orange;
+  color: rgb(134, 247, 247);
   padding: 4px 10px;
   text-shadow: 0px 1px 4px black;
 }
