--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,34 +1,9 @@
-@media (max-width: 500px) {
-  body {
-    width: 100%;
-    overflow-y: hidden;
-  }
-
-  .section1 {
-    width: 100%;
-  }
-
-  .section1::after {
-    content: "";
-    background: url(../imgs/bckg.jpg) center center/cover no-repeat;
-    overflow: hidden;
-    height: 1200px;
-    width: 100%;
-    opacity: 1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-  }
-}
-
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   height: 1000px;
+  background-color: rgba(0, 0, 0, 0.904);
 }
 
 .App {
@@ -40,7 +15,7 @@ body::after {
   background: url(../imgs/bckg.jpg) center bottom/ cover no-repeat;
   overflow: hidden;
   height: 1035px;
-  opacity: 1;
+  opacity: 0.6;
   top: 0;
   left: 0;
   bottom: 0;
